Fix include parsing and expandPath refactor